# Internly

./: .env.example  .gitignore  README.md  machine_maintenance_risk.py  pyproject.toml
design-system/internly/: MASTER.md
design-system/internly/pages/: interview.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/interview/: page.tsx
frontend/components/: internly-ui.tsx
frontend/lib/: api.ts  format-message.ts  format.ts
internly/: __init__.py  api.py  config.py  llm.py  pipeline.py  schemas.py  utils.py
internly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
internly/agents/: __init__.py  evaluation_agent.py  interview_agent.py  research_agent.py  resume_evaluator.py
internly/db/: __init__.py  crud.py  database.py  models.py
internly/services/: __init__.py  interview_service.py  leetcode_service.py  research_service.py  vector_store.py
scripts/: demo_db.py  evaluate_sample_transcript.py  ingest_dsa_questions.py  init_db.py  interview_cli.py  resume_text_demo.py
streamlit_app/: app.py
streamlit_app/pages/: interview.py
tests/: conftest.py  test_config_paths.py  test_db_crud.py  test_interview_answer_depth.py  test_jd_alignment_and_multiquery.py  test_leetcode_api.py  test_research_rules.py  test_research_service.py  test_resume_evaluator.py  test_session_rag.py
